--- a/App3/ChatList.xaml
+++ b/App3/ChatList.xaml
@@ -6,6 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:animations="using:Microsoft.Toolkit.Uwp.UI.Animations"
+    xmlns:viewModels="using:App3.ViewModels"
     mc:Ignorable="d">
   
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
@@ -52,6 +53,22 @@
             <ListView.Style>
                 <StaticResource ResourceKey="ListViewStyle1"/>
             </ListView.Style>
+            <ListView.ItemTemplate>
+                <DataTemplate x:Name="DoubleLineDataTemplate" x:DataType="viewModels:ChatViewModel">
+                    <StackPanel Orientation="Horizontal" Height="50">
+                        <!--<Ellipse Height="40" Width="40" VerticalAlignment="Center">
+                            <Ellipse.Fill>
+                                --><!--<ImageBrush ImageSource="Placeholder.png"/>--><!--
+                                <SolidColorBrush Color="Gray"></SolidColorBrush>
+                            </Ellipse.Fill>
+                        </Ellipse>-->
+                        <StackPanel Orientation="Vertical" VerticalAlignment="Center" Margin="0,0,0,0">
+                            <TextBlock Text="{Binding NameForView}"  Style="{ThemeResource BaseTextBlockStyle}" FontWeight="{Binding TitleFontWeightsForView}" Foreground="{ThemeResource SystemControlPageTextBaseHighBrush}" />
+                            <TextBlock Text="{Binding MessagePreview}" Style="{ThemeResource BodyTextBlockStyle}" Foreground="{Binding MessagepreviewColorForView}" FontSize="13"/>
+                        </StackPanel>
+                    </StackPanel>
+                </DataTemplate>
+            </ListView.ItemTemplate>
         </ListView>
         <CommandBar VerticalAlignment="Bottom" RequestedTheme="Dark" Opening="CommandBar_Opening" Closing="CommandBar_Closing" ClosedDisplayMode="Minimal" >
             <CommandBar.Content>
