--- a/App3/ChatList.xaml
+++ b/App3/ChatList.xaml
@@ -64,7 +64,7 @@
                         </Ellipse>-->
                         <StackPanel Orientation="Vertical" VerticalAlignment="Center" Margin="0,0,0,0">
                             <TextBlock Text="{Binding NameForView}"  Style="{ThemeResource BaseTextBlockStyle}" FontWeight="{Binding TitleFontWeightsForView}" Foreground="{ThemeResource SystemControlPageTextBaseHighBrush}" />
-                            <TextBlock Text="{Binding MessagePreview}" Style="{ThemeResource BodyTextBlockStyle}" Foreground="{Binding MessagepreviewColorForView}" FontSize="13"/>
+                            <TextBlock Text="{Binding MessagePreview}" Style="{ThemeResource BodyTextBlockStyle}" Foreground="{Binding MessagepreviewColorForView}" FontSize="13" TextWrapping="NoWrap"/>
                         </StackPanel>
                     </StackPanel>
                 </DataTemplate>
