--- a/App3/ChatPage.xaml
+++ b/App3/ChatPage.xaml
@@ -14,7 +14,7 @@
     mc:Ignorable="d">
     <app3:MessengerLightPage.Resources>
 
-      
+
         <Visibility x:Key="CurrentChat.IsGroup">Collapsed</Visibility>
         <DataTemplate x:Key="OtherTextMessageDataTemplate" x:DataType="viewModels:ChatMessageViewModel">
             <StackPanel  UseLayoutRounding="True" Background="{ThemeResource SystemAccentColorDark1}" Margin="{Binding Margins}"  HorizontalAlignment="Left" Padding="7">
@@ -53,7 +53,22 @@
             <StackPanel  UseLayoutRounding="True" Background="{ThemeResource SystemAccentColorDark1}" Margin="{Binding Margins}"  HorizontalAlignment="Left" Padding="7">
                 <TextBlock Text="{Binding DisplayName}" HorizontalAlignment="Left" FontSize="10" Foreground="LightGray" TextAlignment="Right" TextWrapping="WrapWholeWords" Visibility="{ThemeResource  CurrentChat.IsGroup}" />
 
-                <Image  HorizontalAlignment="Right" Height="100" Width="100">
+                <Image  HorizontalAlignment="Right" MaxHeight="100" MaxWidth="100">
+                    <ToolTipService.ToolTip>
+                        <TextBlock Text="{Binding Message}"/>
+                    </ToolTipService.ToolTip>
+                    <Image.Source >
+                        <BitmapImage UriSource="{Binding MessageData}"/>
+                    </Image.Source>
+                </Image>
+            </StackPanel>
+        </DataTemplate>
+
+        <DataTemplate x:Key="OtherPhotoMessageDataTemplate" x:DataType="viewModels:ChatMessageViewModel">
+            <StackPanel  UseLayoutRounding="True" Background="{ThemeResource SystemAccentColorDark1}" Margin="{Binding Margins}"  HorizontalAlignment="Left" Padding="7">
+                <TextBlock Text="{Binding DisplayName}" HorizontalAlignment="Left" FontSize="10" Foreground="LightGray" TextAlignment="Right" TextWrapping="WrapWholeWords" Visibility="{ThemeResource  CurrentChat.IsGroup}" />
+
+                <Image  HorizontalAlignment="Right" MaxHeight="250" MaxWidth="250">
                     <ToolTipService.ToolTip>
                         <TextBlock Text="{Binding Message}"/>
                     </ToolTipService.ToolTip>
@@ -96,7 +111,21 @@
 
         <DataTemplate x:Key="SelfImgMessageDataTemplate" x:DataType="viewModels:ChatMessageViewModel">
             <StackPanel  UseLayoutRounding="True" Background="{ThemeResource SystemAccentColorDark2}" Margin="{Binding Margins}"  HorizontalAlignment="Right" Padding="7">
-                <Image  HorizontalAlignment="Right" Height="100" Width="100">
+                <Image  HorizontalAlignment="Right" MaxHeight="100" MaxWidth="100">
+                    <ToolTipService.ToolTip>
+                        <TextBlock Text="{Binding Message}"/>
+                    </ToolTipService.ToolTip>
+                    <Image.Source>
+                        <BitmapImage UriSource="{Binding MessageData}"/>
+                    </Image.Source>
+
+                </Image>
+            </StackPanel>
+        </DataTemplate>
+
+        <DataTemplate x:Key="SelfPhotoMessageDataTemplate" x:DataType="viewModels:ChatMessageViewModel">
+            <StackPanel  UseLayoutRounding="True" Background="{ThemeResource SystemAccentColorDark2}" Margin="{Binding Margins}"  HorizontalAlignment="Right" Padding="7">
+                <Image  HorizontalAlignment="Right" MaxHeight="250" MaxWidth="250">
                     <ToolTipService.ToolTip>
                         <TextBlock Text="{Binding Message}"/>
                     </ToolTipService.ToolTip>
@@ -128,7 +157,10 @@
             SelfFileMessage="{StaticResource SelfFileMessageDataTemplate}"   
                                            
             OtherImgMessage="{StaticResource OtherImgMessageDataTemplate}"
-            SelfImgMessage="{StaticResource SelfImgMessageDataTemplate}"                                           
+            SelfImgMessage="{StaticResource SelfImgMessageDataTemplate}"       
+                                          
+            OtherPhotoMessage="{StaticResource OtherPhotoMessageDataTemplate}"
+            SelfPhotoMessage="{StaticResource SelfPhotoMessageDataTemplate}"                                           
                                            />
 
         <Style x:Key="ListViewItemStyle1" TargetType="ListViewItem">
