--- a/App3/ChatList.xaml
+++ b/App3/ChatList.xaml
@@ -73,7 +73,7 @@
         <CommandBar VerticalAlignment="Bottom" RequestedTheme="Dark" Opening="CommandBar_Opening" Closing="CommandBar_Closing" ClosedDisplayMode="Minimal" >
             <CommandBar.Content>
                 <Grid>
-                    <AppBarButton x:Name="BarButtonAddConv" Icon="Add" Label="New Conv" RequestedTheme="Dark" Visibility="Visible" Click="BarButtonSync_Click" />
+                    <AppBarButton x:Name="BarButtonAddConv" Icon="Add" Label="New Conv" RequestedTheme="Dark" Visibility="Visible" Click="BarButtonAddConv_Click" />
                 </Grid>
             </CommandBar.Content>
             <AppBarButton x:Name="BarButtonDisconect" Icon="Cancel" Label="Disconect"  RequestedTheme="Dark" Visibility="Collapsed" Click="BarButtonDisconect_Click"/>
@@ -81,6 +81,10 @@
             
 
         </CommandBar>
+
+        <local:WebPopUp x:Name="WebPopUp" Visibility="Collapsed">
+
+        </local:WebPopUp>
         <local:NoInternetRibon x:Name="NoInternetRibon" Height="27" VerticalAlignment="Top" >
             <local:NoInternetRibon.DataContext>
                 <local:MessengerLightPage/>
@@ -88,4 +92,6 @@
         </local:NoInternetRibon>
     </Grid>
 </local:MessengerLightPage>
+
+
 
